# transcripts

./: .gitignore  pyproject.toml
transcripts/: saida_transcricao.txt  segment_mp3.py  teste_transcribe.py  transcribes_audio.py  youtube-to-mp3.py
