[tool.poetry]
name = "transcripts"
version = "0.1.0"
description = ""
authors = ["Thiago Ribeiro <mackandalls@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
pytubefix = "^6.8.1"
ffmpeg-python = "^0.2.0"
speechrecognition = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
